# FastGS

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/rendering/: full_eval.py  metrics.py  render.py  train.py  train_base.sh  train_big.sh
scripts/surface/: full_eval.py  metrics.py  render.py  render_tnt.py  run_tnt.py  train.py  visual.py
src/fastgs/: __init__.py
src/fastgs/rendering/: __init__.py  renderer.py  trainer.py
src/fastgs/rendering/gaussian_renderer/: __init__.py  network_gui.py
src/fastgs/rendering/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
src/fastgs/rendering/utils/: camera_utils.py  fast_utils.py
src/fastgs/surface/: __init__.py  mesh.py  trainer.py
src/fastgs/surface/arguments/: __init__.py
src/fastgs/surface/gaussian_renderer/: __init__.py  network_gui.py
src/fastgs/surface/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
src/fastgs/surface/utils/: camera_utils.py  fast_utils.py
